--- a/dv_fp-project.Rmd
+++ b/dv_fp-project.Rmd
@@ -3,15 +3,15 @@ title: "Exploring Data Visualization with Scientific Results"
 author: "Misha Ash"
 date: "2018-06-03"
 output:
-  html_document:
+  rmarkdown::html_document:
 #    toc: true
 #    toc_float:
 #      collapsed: true
-    theme: lux
+    theme: cosmo
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, fig.width = 6, fig.asp = 0.618, echo = FALSE)
 
 library(rmarkdown)
 #library(extrafont)
@@ -235,9 +235,9 @@ tbl_gesture_type_axis <- table_gesture_type_axis[, list(mean = mean(GESTURE_PRES
 
 ```
 
-### introduction
-
-#### background
+## INTRODUCTION
+***
+### BACKGROUND
 
 > “We are more apt to make a grasping gesture when we speak of grasping an idea than when we speak of grasping a doorknob.” Benjamin Lee Whorf [^0]
 
@@ -253,13 +253,16 @@ My thesis project is organized around a study that explores the way people conce
 
 [^4]: Relations were either spatial (above/below and left/right) or non-spatial (better/worse and earlier/later), and either along the horizontal axis (left/right and earlier/later) or vertical axis (above/below and better/worse).
 
-#### visualization question
+***
+### VISUALIZATION INQUIRY
 
 As we saw throughout the course, many choices are made in the course of designing data visualizations, including in scientific contexts. One of the most basic questions pertains to the choice of visual form, which is what I will explore here. In class, we mostly discussed relationships among continuous variables when it comes to this. The data I work with here has a discrete response variable (presense/absence of gesture on a given trial) that I put on a continuous scale as a proportion of trials on which gesture is present. The independent variables or predictors are likewise discrete and will be treated as discrete. Here I will focus on two of them: relation type (spatial vs non-spatial) and axis (horizontal vs vertical), with more focus on the former. My main interest for this project is to consider some of the nuances and alternative possibilities for visualizing this information.
 
-### distributions
+***
+***
+## DESCRIPTIVE DISTRIBUTION
 
-An important and valuable visualization task involves representing distributions. 
+An important and valuable visualization task involves representing distributions and descriptive statistics of the data. Here I will visually describe gesture production across all participants in this study.
 
 ```{r production histo 1, echo = FALSE}
 mean_subject_errors_gestures %>%
@@ -300,7 +303,7 @@ Note that this is a bar chart, not a histogram. It was generated with a `geom_co
 
 I make some further refinements to this chart, as follows:
 
-```{r production histo 2, echo = FALSE} 
+```{r production histo 2, echo = FALSE, fig.width = 6.5} 
 
 production_histo_2 <- X %>%
   
@@ -355,16 +358,25 @@ I also enhanced the *insightfulness* of the chart with additional two elements. 
 
 In addition to the aesthetics applied in the previous chart, here I chose colors that are pleasant while discernable to the colorblind reader (based on Color Brewer pallettes). I also adjusted the font type to a serif family, based on Turfte's claim that they are more readable (as corroborated by some results we reviewed in class). 
 
-### means
+Finally, we can add an element of interactivity to this plot, enabling further exploration with precise values for each bars segment:
 
-#### bar charts
+```{r plotly histo 2, fig.width = 8}
+ggplotly(production_histo_2, tooltip = c("total mean", "spatial mean", "percent_gestured", "SPACE_IV"))
+```
 
+***
+***
+## COMPARING GROUP MEANS
 
-A typical approach to representing these results is with a bar graph that includes standard error bars, like so:
+Although descriptive, the pseudo-distributions above do not directly compare means, as is most frequently done with bar charts.
+***
+### BAR CHART
 
-```{r traditional bar chart, include = FALSE}
+The typical approach to representing a inferential mean comparison results (such as ANOVA) is with a bar graph that includes standard error bars, like so:
 
-prop_gesture_type_axis %>%
+```{r traditional bar chart, include = FALSE, warning = FALSE, error = FALSE}
+
+bar_chart_1 <- prop_gesture_type_axis %>%
 
   full_join(tbl_gesture_type_axis) %>%
 
@@ -387,20 +399,81 @@ prop_gesture_type_axis %>%
   
       # add numerical values onto bars
       geom_text(aes(label = sprintf("%0.2f", round(prop_gesture, digits = 2)), 
-                    y = prop_gesture + 0.1,
+                    y = prop_gesture + 0.095,
                     group = trial_type,
                     fontface = "bold"), 
                     position = position_dodge(0.55),
-                    color = "#767676") +
+                    color = "#717982") +
+  
+ # geom_signif(comparisons = list(c("spatial", "non-spatial")), 
+  #            map_signif_level = TRUE, color = "#717982") +
   
 
       theme_minimal(base_family = "serif") + # set theme and serif font
 
       scale_fill_manual("item axis", 
-                       values = c("#66c2a5", "#8da0cb")) +
+                       values = c("#8da0cb", "#66c2a5")) +
       
-      scale_color_manual("item axis", 
-                      values = c("#66c2a5", "#8da0cb")) +
+#      scale_color_manual("item axis", 
+#                      values = c("#66c2a5", "#8da0cb")) +
+      
+      # add title, axis, and value labels
+      labs(x = "trial type", 
+           y = "proportion of trials with gesture", fill = "item axis",
+           title = "GESTURE PRODUCTION BY TRIAL TYPE") +
+     # scale_x_discrete(labels = c("HARD", "EASY")) +
+  
+      # adjust theme parameters
+      theme(panel.grid.major.x = element_blank(),
+          panel.grid.minor.x = element_blank(),
+          legend.position = "bottom",
+          axis.title.y = element_text(margin = margin(t = 0, r = 15, b = 0, l = 0)),
+          axis.title.x = element_text(margin = margin(t = 15, r = 0, b = 0, l = 0)),
+          axis.text.x = element_text(margin = margin(t = -10, r = 0, b = 0, l = 0)))
+
+```
+
+```{r}
+bar_chart_1
+```
+
+
+In this chart, similar aesthetic considerations are included as the foregoing charts, but now we abandon individual-level statistics in favor of comparing the means of gesture production across our conditions of interest. This graph does show quite clearly that the means between spatial and non-spatial groups are different even when standard error is taken into account (as indicated by the error bars), although comparing these values across axes is morewhat more difficult. Comparisons are aided by the gridlines as well as inclusion of precise mean values.
+
+  * *Spatial trials were more likely to elicit gesture (p = .002).*
+
+  * *Trial axis did not affect gesture production (p = .14).*
+
+However, by representing the means this way we lose information about the underlying distribution. This has been an increasingly common criticism of using bar plots to show mean comparisons---they may hide vastly different distributions.
+[^5]
+
+[^5]: See Page Piccinini's criticism [here](https://pagepiccinini.com/2016/02/23/boxplots-vs-barplots/). Page advocates for the box plot alternative because it more clearly shows the distribution while also showing the mean difference. 
+***
+### BOX PLOT
+
+The boxplot is sometimes proferred as an alternative that shows mean differences in a way that preserves information about their underlying distribution. Below is a boxplot of the same means generated with `geom_boxplot`. I also add a layer of points with `geom_point` in order to more directly show the data constituting the distribution:
+
+```{r boxplot gesture-type-axis 01, include = FALSE, warning = FALSE}
+  
+box_plot_01 <- ggplot(data = prop_subj_gesture_type_axis, aes(item_axis, prop_gesture, 
+             fill = trial_type)) +
+      
+      geom_boxplot(aes(width = 0.5), 
+               alpha = 0.8, 
+               position = "dodge") +
+    
+      geom_point(data = prop_subj_gesture_type_axis,
+                 position = position_jitterdodge(jitter.width = 0.15),
+                 aes(color = "#a2adba"), 
+                 size = 2, alpha = 0.55, shape = 16, #show_guide = FALSE, 
+                 color = "#40454a") +  #, color = "#736A6A") +
+
+      theme_minimal() +
+  
+      scale_fill_manual("item axis", values = c("#8da0cb", "#66c2a5")) +
+      
+  #    scale_color_manual("item axis", 
+  #                     values = wes_palette(n = 4, name = "Zissou1")[1:4]) +
       
       # add title, axis, and value labels
       labs(x = "trial type", 
@@ -411,224 +484,52 @@ prop_gesture_type_axis %>%
       # adjust theme parameters
       theme(panel.grid.major.x = element_blank(),
           panel.grid.minor.x = element_blank(),
-          legend.position = "bottom",
+          legend.position = "right",
           axis.title.y = element_text(margin = margin(t = 0, r = 15, b = 0, l = 0)),
           axis.title.x = element_text(margin = margin(t = 15, r = 0, b = 0, l = 0)),
           axis.text.x = element_text(margin = margin(t = -10, r = 0, b = 0, l = 0)))
+    
 ```
-
-
-
-
-
-
-### Is it worth visualizing the basic structure of experimental design? {data-commentary-width=400}
-
-```{r study design tree, echo = FALSE}
-
-# create hierarchical data frame of IVs
-branch_1 <- data.frame(from = "origin", to = c("spatial", "non-spatial"))
-branch_2 <- data.frame(from = rep(branch_1$to, each = 2), to = paste(c("vertical", "horizontal"), seq(1:4), sep="_"))
-branch_3 <- data.frame(from = rep(branch_2$to, each = 3), to = paste(c("hard", "easy", "invalid"), seq(1:12), sep="_"))
-edges <- rbind(branch_1, branch_2, branch_3)
-
-### add frame with node information for labels and color info
-
-#labels <- edges %>%
-#  mutate(name = as.character(to)) %>%
-#  separate(col = name, into = c("label", "index"), sep = "_")
-
-# graph object
-tree <- graph_from_data_frame(edges)
-
-# dendrogram
-iv_dentro <- ggraph(tree, layout = 'dendrogram', circular = FALSE) + 
-  geom_edge_diagonal() +
-  geom_node_point() + #color = "#c7d4b6"
-  #geom_node_text(aes(color = labels$label) , angle=90 , hjust=1, nudge_y=-0.1) +
-  #geom_node_text(aes(label = labels$label, color = labels$label) , angle=90 , hjust=1, nudge_y=-0.1) +
-
-  #geom_node_point(aes(filter=leaf, size=value, color=group) , alpha=0.6) +
-  theme_void()
-
-# add fill aesthetic identifying relevant groups!
-iv_circles <- ggraph(tree, 'circlepack') + 
-    geom_node_circle(aes(), size = 0.25, n = 50) + 
-    coord_fixed() +
-    theme_void()
-
-ggarrange(iv_dentro, iv_circles, 
-          labels = c("tree", "nested circles"),
-          ncol = 2, nrow = 1)
-
-
-
-```
-
-
-***
-
-##### DESIGN
-
-* Within-subjects (2 x 2 x 3)
-
-  * spatiality of relations
-      + spatial
-      + non-spatial
-  * axis of relations
-      + vertical
-      + horizontal
-  * problem difficulty
-      + hard
-      + easy
-      + invalid
-      
-* (Blocked by problem type and axis with difficulty pseudorandomly interleaved.)
-      
-      
-##### 
-* Visualizations
-
-  + The factors of an experiment are typically described without visualization, particularly when there are more than two factors. When they are visualized, it is usually as a matrix grid. 
-  + Alternative visual forms may more readily capture the hierarchical structure of crossed multifactorial designs. 
-  + Thoughts about visualizing this structure? Is it helpful?
-  + Could also try a tree map with groups and subgroups.
-  + Need colors and labelling.
-
-
-
-### Linear syllogisms were used to systematically vary relation type and difficulty.
-
-![](/Users/misha/R/Data Viz/fp-ash/resources/waffles render fail.png)
-
-```{r waffles, include = FALSE, eval = FALSE}
-
-
-# font_import()
-
-
-waffle_1 <- waffle(c("vertical (above / below)" = 10, 
-            "horizontal (left-of / right-of)" = 10,
-            "vertical (better / worse)" = 10,
-            "horizontal (earlier / later)" = 10), rows = 4, 
-         colors = c("#7b3294", "#008837", "#c2a5cf", "#a6dba0"), 
-         title = "type of relation", xlab = "1 sq = 1 problem") #, use_glyph = "asterisk")
-
-waffle_1
-
-waffle_1 <- waffle(c("vertical (above / below)" = 10, # "vertical (above / below)" = 5, 
-            "horizontal (left-of / right-of)" = 10, # "horizontal (left-of / right-of)" = 5,
-            "vertical (better / worse)" = 10,
-            "horizontal (earlier / later)" = 10), rows = 4, 
-         colors = c("#7b3294", "#008837", "#c2a5cf", "#a6dba0"), title = "type of relation")
-
-
-
-waffle_2  <- waffle(c(spatial = 20, "non-spatial" = 20), rows = 4, 
-         colors = c("#1f78b4", "#a6cee3"), title = "spatiality of relation")
-
-waffle_2
-
-waffle_3 <- waffle(c("hard" = 16, "invalid" = 8, "easy" = 16), rows = 4, #use_glyph = "car", glyph_size = 6,
-         colors = c("#d95f02", "#DDDDDD", "#1b9e77"), title = "problem difficulty")
-
-waffle_3
-
-#ggarrange(waffle_1, waffle_2, waffle_3,
-#          labels = c("A", "B", "C"),
-#          ncol = 1, nrow = 3)
-
-plot_grid(waffle_1, waffle_2, waffle_3, ncol = 1, align = "v")
-
-```
-
-
-***
-
-#### METHODS
-
-* After the experimenter left the room, participants solved 40 linear syllogisms, blocked by trial type (n = 24).
-
-* Each syllogism was presented for 10 seconds.
-
-* Participants solved each problem by saying “yes” if true, “no” if false, and “can’t tell” if invalid.
-
-* Data of participants was coded for response accuracy, gesture presense, and axis of gesturing.
-
-**Waffleplots not rendering** (shown as image).
-
-
-
-
-### Typical visualization of mean comparison results.
-
-```{r include = FALSE}
-# referencing image doesn't work with tilde expansion
-# use relative paths internal to repository!
-```
-
-![](/Users/misha/R/Data Viz/fp-ash/resources/production_standard-bars.png) 
-
-***
-
-* Spatial trials were more likely to elicit gesture (p = .002).
-
-* Trial axis did not affect gesture production (p = .14; not shown).
-
-
-
-
-### A limitation of barplots.
-
-![](/Users/misha/R/Data Viz/fp-ash/resources/barplot_psa1.jpg)
-
-***
-
-* As [Page Piccinini](https://pagepiccinini.com/2016/02/23/boxplots-vs-barplots/) and others have pointed out, barplots can hide the distribution of data!
-
-* Page suggests we abandon barplots in favor of boxplots.
-
-### Histograms
 
 ```{r}
-
+box_plot_01
 ```
 
+```{r boxplot 02, include = FALSE, warning = FALSE, eval = FALSE}
+# And an alternative version rendered with `plot_ly`:
 
-### Boxplots
-
-```{r box plot 1, include = FALSE}
 p <- plot_ly(y = ~ prop_subj_gesture_type_axis$prop_gesture, 
              type = "box", boxpoints = "all", jitter = 0.3,
              pointpos = 0)
 
-p <- plot_ly(prop_subj_gesture_type_axis, x = ~ item_axis,
-             y = ~ prop_gesture, color = ~ trial_type, type = "box",
-             boxpoints = "all", jitter = 0.3, pointpos = 0) %>%
+p <- plot_ly(prop_subj_gesture_type_axis, 
+             x = ~ item_axis,
+             y = ~ prop_gesture, 
+             color = ~ trial_type,
+             #marker = list(color = "#8da0cb", "#66c2a5"),
+             type = "box",
+             boxpoints = "all", 
+             jitter = 0.3, 
+             pointpos = 1) %>%
   layout(boxmode = "group")
 
 p
-
-### leave out
-
-# knitr::include_graphics('/Users/misha/R/Data Viz/fp-ash/resources/dots.png')
-# ![](/Users/misha/R/Data Viz/fp-ash/resources/dots.png)
-
 ```
 
-![](/Users/misha/R/Data Viz/fp-ash/resources/Rplot.png)
 
+
+While the advantage of boxplots is clear, it is also relative to the data. If the difference between means does not owe much to the difference in distributions, then bar plots seem to be adequate, although perhaps boxplots should be prefered regardless, since they would represent this fact. When it comes to the experiments with boxplots at hand, I have a couple lines of thought. First, with respect to the datapoints, it is not clear if they contribute enough to be included. Although they do show the data directly, and the clustering at the minimum and maximum values is informative, there is also the problem of overlap that suggests alternative ways to present this information may be preferable. On the `ggplot2` version, I increased their `size`, reduced `alpha` to 0.75, and used `jitter` in order to better show the number of points in regions where there is overlap. 
+
+The second issue is that it is not clear to me how to properly translate what a traditional bar chart represents into the boxplot format. Boxplots, also known as box-and-whisker plots, typically show the **median** with a horizontal line, not the mean. The lower and upper edges show the 1st and 3rd quartiles, and the endpoints of the whiskers represent the minimum and maximum values. This five-point summary is useful, but it is different from the information represented by the bar chart, which shows the means and standard errors about the means. The box plot can of course be modified to convey this information: the median can be replaced with the mean, and the quartiles can be replaced with the standard errors. Yet this would also remove the distributional information that gives it comparative advantages over the bar plot. Because these representational features of the box plot are highly conventionalized, however, changing what is represented is likely to have the side effect of requiring further explanation that detracts from less contextually dependent encoding. Perhaps an alternative can be found that has the boxplot's virtue of representing aspects of the distribution and a less context-sensitive way of representing means.
 
 ***
+### SPLIT VIOLIN
 
-* Boxplot more clearly shows the distribution.
+A less well-worn graphical form that may prove to be a useful alternative is the violin plot. Violin plots can display distributions of data (typically as a density distribution) with plenty of remaining room for elements that show mean comparison. While violin plots usually have reflective symmetry about their vertical axis, it is also possible to split the plot along this axis so two of the groups being compared are on either side of the symmetry. I propose that this is a useful feature because asymmetry can act as a high-level visual feature to facilitate comparison. That is, asymmetry may be a good way to signal differences in distribution, even for groups with the same mean, especially given people's sensitivity to bilateral symmetry.[^6] The following split violin plot represents the means with a horizontal line within the (density) distributions of the underlying data from which the means are calculated. 
 
-* Datapoints seem unnecessary in this case: they do not further reveal the data and overlap at the extremes.
+[^6]: This would be interesting to resolve empirically, distinguishing both graphical forms (bar plot, box plot, and violin plot) and, in the case of violin plots, accuracy of comparisons between two symmetrical plots and one asymmetrical plot. It may also be possible to tease out the role of convention by measuring years of education and majors.
 
-
-### Using split violin plots to visualize distributions of mean comparisons.
-
-```{r violin 1, warning = FALSE, echo = FALSE}
+```{r violin 1, warning = FALSE, echo = FALSE, fig.width = 8}
 
 gesture_proportion_violin <- prop_subj_gesture_type_axis %>%
   
@@ -697,145 +598,227 @@ gesture_proportion_violin <- prop_subj_gesture_type_axis %>%
 
 gesture_proportion_violin
 
-ggsave('gest_space_violin.png', device = png, path = "/Users/misha/R/Data Viz/fp-ash/resources", 
-       width = 5, height = 3, units = "in")
-
-library(webshot)
-export(gesture_proportion_violin, file = "gest_space_violin.png")
-
 #plotly_IMAGE(gesture_proportion_violin, width = 1200, height = 700, format = "png", scale = 2,
 #             out_file = "/Users/misha/R/Data Viz/fp-ash/resources/gest_space_violin.png")
 ```
 
+Some features of this `plot_ly` visualization:
+
+* Kernel density estimation (KDE) affected this visualization by smoothing the curve beyond the range of the data. This was addressed by setting the range.
+* Means set with `meanline` parameter.
+* Hover enables exploration of precise values.
+
+Future improvements:
+
+- Visualize a shaded region under the curve to represent standard error.
+- Add static labels to the mean values.
+
+[^7]: This is another interesting empirical issue.
+
 ***
+### CONCLUSION
 
-* Not sure how kernel density estimation (KDE) is affecting this visualization, but the distribution extends beyond the range of the data.
-
-
-
+There is still plenty of room for improvement, but *the split violin plot seems to be a viable alternative form for representing mean comparisons*. One shortcoming may be the comparability both within and across groups in a two-way comparison, which is enabled by bar graphs. I suspect this is more difficult because of the visual juxtoposition across space that is required to compare the distribution. However, it does not seem this detracts from the possibility of comparing the means, which is the only thing a bar graph enables in this context. Therefore, even if true, this is only a fault to the extent that the distributions provide additional details that may distract from such comparisons, thereby making them more difficult.[^7] This is likely to be a matter that is significantly affected by the audience for which the visualization is intended. In this case, the intended audience is one of scientists. Even so, many of the basic visualization design considerations should apply, for scientists, for all their training, are human, and they are likely to be affected by the same perceptual features that affect the layperson (although their experience no doubt plays a role in the facility with which they can interpret visualizations of data, particularly in their domain of expertise).
 
 
+***
+***
+***
+#### MISCELLANEOUS VESTIGES FROM RELATED EFFORTS
+
+##### STUDY DESIGN
+
+* Within-subjects (2 x 2 x 3)
+
+  * spatiality of relations
+      + spatial
+      + non-spatial
+  * axis of relations
+      + vertical
+      + horizontal
+  * problem difficulty
+      + hard
+      + easy
+      + invalid
+      
+* Blocked by problem type and axis with difficulty pseudorandomly interleaved.
+* Linear syllogisms were used to systematically vary relation type and difficulty.
+
+*Is it worth visualizing the basic structure of experimental design?*
+
+* Visualizations
+
+  + The factors of an experiment are typically described without visualization, particularly when there are more than two factors. When they are visualized, it is usually as a matrix grid. 
+  + Alternative visual forms may more readily capture the hierarchical structure of crossed multifactorial designs. 
+  + Thoughts about visualizing this structure? Is it helpful?
+  + Could also try a tree map with groups and subgroups.
+  + Need colors and labelling.
+
+```{r study design tree, echo = FALSE}
+
+# create hierarchical data frame of IVs
+branch_1 <- data.frame(from = "origin", to = c("spatial", "non-spatial"))
+branch_2 <- data.frame(from = rep(branch_1$to, each = 2), to = paste(c("vertical", "horizontal"), seq(1:4), sep="_"))
+branch_3 <- data.frame(from = rep(branch_2$to, each = 3), to = paste(c("hard", "easy", "invalid"), seq(1:12), sep="_"))
+edges <- rbind(branch_1, branch_2, branch_3)
+
+### add frame with node information for labels and color info
+
+#labels <- edges %>%
+#  mutate(name = as.character(to)) %>%
+#  separate(col = name, into = c("label", "index"), sep = "_")
+
+# graph object
+tree <- graph_from_data_frame(edges)
+
+# dendrogram
+iv_dentro <- ggraph(tree, layout = 'dendrogram', circular = FALSE) + 
+  geom_edge_diagonal() +
+  geom_node_point() + #color = "#c7d4b6"
+  #geom_node_text(aes(color = labels$label) , angle=90 , hjust=1, nudge_y=-0.1) +
+  #geom_node_text(aes(label = labels$label, color = labels$label) , angle=90 , hjust=1, nudge_y=-0.1) +
+
+  #geom_node_point(aes(filter=leaf, size=value, color=group) , alpha=0.6) +
+  theme_void()
+
+# add fill aesthetic identifying relevant groups!
+iv_circles <- ggraph(tree, 'circlepack') + 
+    geom_node_circle(aes(), size = 0.25, n = 50) + 
+    coord_fixed() +
+    theme_void()
+
+ggarrange(iv_dentro, iv_circles, 
+          labels = c("tree", "nested circles"),
+          ncol = 2, nrow = 1)
+
+
+
+```
+
+
+#### METHODS
+
+* After the experimenter left the room, participants solved 40 linear syllogisms, blocked by trial type (n = 24).
+* Each syllogism was presented for 10 seconds.
+* Participants solved each problem by saying “yes” if true, “no” if false, and “can’t tell” if invalid.
+* Data of participants was coded for response accuracy, gesture presense, and axis of gesturing.
+
+**Waffleplots not rendering** (shown as image).
+
+![](/Users/misha/R/Data Viz/fp-ash/resources/waffles render fail.png)
+
+```{r waffles, include = FALSE, eval = FALSE}
+
+
+# font_import()
+
+
+waffle_1 <- waffle(c("vertical (above / below)" = 10, 
+            "horizontal (left-of / right-of)" = 10,
+            "vertical (better / worse)" = 10,
+            "horizontal (earlier / later)" = 10), rows = 4, 
+         colors = c("#7b3294", "#008837", "#c2a5cf", "#a6dba0"), 
+         title = "type of relation", xlab = "1 sq = 1 problem") #, use_glyph = "asterisk")
+
+waffle_1
+
+waffle_1 <- waffle(c("vertical (above / below)" = 10, # "vertical (above / below)" = 5, 
+            "horizontal (left-of / right-of)" = 10, # "horizontal (left-of / right-of)" = 5,
+            "vertical (better / worse)" = 10,
+            "horizontal (earlier / later)" = 10), rows = 4, 
+         colors = c("#7b3294", "#008837", "#c2a5cf", "#a6dba0"), title = "type of relation")
+
+
+
+waffle_2  <- waffle(c(spatial = 20, "non-spatial" = 20), rows = 4, 
+         colors = c("#1f78b4", "#a6cee3"), title = "spatiality of relation")
+
+waffle_2
+
+waffle_3 <- waffle(c("hard" = 16, "invalid" = 8, "easy" = 16), rows = 4, #use_glyph = "car", glyph_size = 6,
+         colors = c("#d95f02", "#DDDDDD", "#1b9e77"), title = "problem difficulty")
+
+waffle_3
+
+#ggarrange(waffle_1, waffle_2, waffle_3,
+#          labels = c("A", "B", "C"),
+#          ncol = 1, nrow = 3)
+
+plot_grid(waffle_1, waffle_2, waffle_3, ncol = 1, align = "v")
+
+```
 
 
 
 
-
-
-
-### Order effects (chronological)
-
-```{r order effect, include = FALSE}
-mean_gesture_chronology <- aggregate(study_01$GESTURE_PRESENT,
-                                     by = list(study_01$trial_number,
-                                               study_01$SPATIAL_FIRST),
-                                     FUN = 'mean')
-
-colnames(mean_gesture_chronology) <- c("trial_number","SPATIAL_FIRST", "mean_gesture")
-
-mean_gesture_chronology <- mean_gesture_chronology[order(mean_gesture_chronology$trial_number), ]
-
-
-mean_gesture_chronology %>%
+```{r gesture AXIS trial AXIS, include = FALSE}
+study_01 %>%
+  dplyr::select(gesture_axis, item_axis, trial_type) %>%
+  filter(!is.na(gesture_axis)) %>%
+  group_by(item_axis, trial_type, gesture_axis) %>%
+  summarize(N = n()) %>%
+  mutate(freq = N / sum(N),
+          pct = round((freq * 100), 0)) %>%
   
-  ggplot() +
   
-    geom_point(aes(trial_number, mean_gesture,
-                   color = as.character(SPATIAL_FIRST)),
-               size = 1, alpha = 0.4, show.legend = FALSE) +
-  
-    geom_smooth(aes(trial_number, mean_gesture, color = as.character(SPATIAL_FIRST)),
-                size = 0.5, alpha = 0.25) +
-  
-    # geom_smooth(aes(trial_number, mean_gesture))
+#  select(gesture_axis, item_axis, trial_type) %>%
+ # filter(!is.na(gesture_axis)) %>%
+  #count(gesture_axis, item_axis, trial_type) %>%  #%>% group1_count
+  # mutate(proportion = n/sum(n)) %>%
+ 
+  ggplot(aes(item_axis, freq, fill = gesture_axis)) + 
+      
+      geom_col(aes(width = 0.5), 
+               alpha = 0.75, 
+               position = "stack") +
+     facet_grid(~ trial_type) +
+
+    
   
       # set theme
       theme_minimal() +
-  
-      # change color scheme of fill colors
-      scale_fill_manual("spatial first", 
-                       values = wes_palette(n = 4, name = "Royal1")[3:4],
-                       labels = c("no", "yes")) +
-      
-      scale_color_manual("spatial first", 
-                       values = wes_palette(n = 4, name = "Royal1")[1:2],
-                       labels = c("no", "yes")) +
-  
-      scale_y_continuous(limits = c(0, 1)) +
+
+      scale_fill_manual("item axis", 
+                       values = c("#800000", "#767676", "#350E20", "#FFA319")) +
       
       # add title, axis, and value labels
-      labs(x = "trial number", 
-           y = "mean gesture production", fill = "spatial first",
-           title = "gesture production by trial (chronological)") +
+      labs(x = "trial type", 
+           y = "proportion of trials", fill = "item axis",
+           title = "gesture axis") +
      # scale_x_discrete(labels = c("HARD", "EASY")) +
   
       # adjust theme parameters
       theme(panel.grid.major.x = element_blank(),
-          #panel.grid.minor.x = element_blank(),
-          legend.position = "right",
+          panel.grid.minor.x = element_blank(),
+          legend.position = "bottom",
           axis.title.y = element_text(margin = margin(t = 0, r = 15, b = 0, l = 0)),
           axis.title.x = element_text(margin = margin(t = 15, r = 0, b = 0, l = 0)),
           axis.text.x = element_text(margin = margin(t = -10, r = 0, b = 0, l = 0)))
-
+    
 ```
 
-![](/Users/misha/R/Data Viz/fp-ash/resources/gest-order.png)
+Typical visualization of mean comparison results.
 
-***
+```{r include = FALSE}
+# referencing image doesn't work with tilde expansion
+# use relative paths internal to repository!
+```
+
+![](/Users/misha/R/Data Viz/fp-ash/resources/production_standard-bars.png) 
+
+### ORDER EFFECTS (chronological)
+
+![](/Users/misha/R/Data Viz/fp-ash/resources/gest-order.png)
 
 * More gestures were produced when spatial relations are presented before abstract relations.
 
 * However, more gestures were produced in the spatial condition even when non-spatial relations were presented first.
 
 
+***
+***
 
 
-
-
-### SKETCHES (temp)
-
-```{r eval = FALSE}
-library(igraph)
-library(ggraph)
-
-dendrogram <- as.dendrogram(hclust(dist(iris[, 1:4])))
-
-ggraph(dendrogram, 'dendrogram') + 
-  geom_edge_elbow()
-
-ggraph(dendrogram, 'dendrogram', circular = TRUE) + 
-  geom_edge_elbow() + 
-  coord_fixed()
-
-
-dendro_data <- level_01_data %>%
-  select(SPACE_IV, AXIS_IV, DIFF_IV)
-
-dendro_study_design <- as.dendrogram(hclust(dist(dendro_data)))
-
-
-ggraph(dendro_study_design, 'dendrogram') + 
-  geom_edge_elbow()
-
-ggraph(dendro_study_design, 'dendrogram', circular = TRUE) + 
-  geom_edge_elbow() + 
-  coord_fixed()
-
-```
-
-
-```{r problem waffles, include = FALSE, eval = FALSE}
-waffle_1 <- iron(
-  
-   waffle(c("vertical (above / below)" = 10, 
-            "horizontal (left-of / right-of)" = 10,
-            "vertical (better / worse)" = 10,
-            "horizontal (earlier / later)" = 10), rows = 4, 
-         colors = c("#7b3294", "#008837", "#c2a5cf", "#a6dba0"), title = "type of relation"),
-  
-  waffle(c(spatial = 20, "non-spatial" = 20), rows = 4, 
-         colors = c("#1f78b4", "#a6cee3"), title = "spatiality of relation")
-)
-```
 
 
 
